Compile with llvm-config --cxxflags

--- a/wercker.yml
+++ b/wercker.yml
@@ -3,6 +3,9 @@ build:
   steps:
     - bundle-install
     - script:
+        name: install build-deps
+        code: sudo apt-get update && sudo apt-get install -y llvm
+    - script:
         name: compile
         code: bundle exec rake compile
     - script:
