Current opt_send_without_block is broken...

--- a/wercker.yml
+++ b/wercker.yml
@@ -11,3 +11,6 @@ build:
     - script:
         name: rspec
         code: bundle exec rake spec
+    - script:
+        name: rspec
+        code: bin/benchmark
