--- a/wercker.yml
+++ b/wercker.yml
@@ -7,7 +7,7 @@ build:
         code: git submodule init && git submodule update
     - script:
         name: compile
-        code: bundle exec rake compile
+        code: bundle exec rake compile insns_bc
     - script:
         name: rspec
         code: bundle exec rake spec
