Add benchmark to profile regression
of :opt_call_c_function, push result and :leave

--- a/wercker.yml
+++ b/wercker.yml
@@ -17,3 +17,6 @@ build:
     - script:
         name: bm_app_fib
         code: bin/bm_app_fib
+    - script:
+        name: bm_empty_method
+        code: bin/bm_empty_method
