--- a/wercker.yml
+++ b/wercker.yml
@@ -5,18 +5,18 @@ build:
     - script:
         name: clone cruby
         code: git submodule init && git submodule update
-    # - script:
-    #     name: compile
-    #     code: bundle exec rake insns_bc compile
-    # - script:
-    #     name: rspec
-    #     code: bundle exec rake spec
+    - script:
+        name: compile
+        code: bundle exec rake compile
+    - script:
+        name: rspec
+        code: bundle exec rake spec
+    - script:
+        name: bm_prototype
+        code: bin/bm_prototype
     # - script:
     #     name: bm_loop_while
     #     code: bin/bm_loop_while
     # - script:
     #     name: bm_app_fib
     #     code: bin/bm_app_fib
-    # - script:
-    #     name: bm_empty_method
-    #     code: bin/bm_empty_method
