--- a/wercker.yml
+++ b/wercker.yml
@@ -13,7 +13,7 @@ build:
         code: bundle exec rake spec
     - script:
         name: optcarrot
-        code: bundle exec rake optcarrot && bundle exec ruby -Ilib -rllrb/start optcarrot/bin/optcarrot --benchmark optcarrot/examples/Lan_Master.nes
+        code: bundle exec rake optcarrot:run
     - script:
         name: bm_loop_while
         code: bin/bm_loop_while
